# psidash

./: .gitignore  Dockerfile  README.ipynb  README.md  WorkLog.md  docker-compose.yaml  hourly.yaml  psidash.yaml  setup.cfg
examples/: basic.py  basic.yaml  demo.ipynb  demo.py  demo.yaml  markdown_test.yaml  multi_match.py  multi_match.yaml  mycallbacks.py  plotly_intro.py  plotly_intro.yaml  workflows.py  workflows.yaml
psidash/: __init__.py  psidash.py
psidash/cli/: main.py
psidash/cli/conf/: config.yaml  psidash.yaml
psidash/examples/: demo.yaml
