[metadata]
name = psidash
version = 0.0.2
author = Asher Pembroke
author_email = apembroke@predsci.com
description = predsci web tools
; url = https://github.com/asherp/
; license_file = LICENSE
; long_description = file: docs/README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.6
	Operating System :: OS Independent
	License :: OSI Approved :: Apache Software License
license = Apache License Version 2.0

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  hydra-core==1.2.0
  dash>=1.11.0

[options.entry_points]
console_scripts =
  psidash = psidash.cli.main:entry
  

